EDIT: Fix Overflow mobile browser over scroll/pull-to-refresh

--- a/src/App.css
+++ b/src/App.css
@@ -43,8 +43,22 @@
 
 .img {
   width: 100%;
-  height: 80vh;
+  height: 100%;
   object-fit: contain;
+  display: block;
+}
+
+swiper-container {
+  display: block;
+  height: 100%;
+  width: 100%;
+}
+
+swiper-slide {
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .MyBtn {
